# impala

./: .asf.yaml  .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  .isort.cfg  AGENTS.md  CMakeLists.txt  CNAME  DISCLAIMER  EXPORT_CONTROL.md  LICENSE.txt  LOGS.md  NOTICE.txt  README  README-build.md  README.md  SECURITY.md  Untitled-1.html  buildall.sh  bylaws.html  community.html  doap_Impala.rdf  download_deps.py  downloads.html  draft-THREAT-MODEL.md  hive-4.patch  hive400_impala430.patch  impala-books.html  impala-docs.html  index.html  overview.html  params.json  pom.xml  rebuild.sh  setup.cfg
be/: .astylerc  .gitignore  .impala.doxy  CMakeLists.txt  README
be/cmake_modules/: FindGFlags.cmake  FindGLog.cmake  FindGTest.cmake  FindHDFS.cmake  FindPProf.cmake  FindThrift.cmake
be/generated-sources/gen-cpp/: CMakeLists.txt
be/generated-sources/opcode/: CMakeLists.txt
be/src/: text-scan-node-test.cc
be/src/benchmarks/: CMakeLists.txt  atod-benchmark.cc  atof-benchmark.cc  atoi-benchmark.cc  bit-packing-benchmark.cc  bitmap-benchmark.cc  bloom-filter-benchmark.cc  bswap-benchmark.cc  convert-timestamp-benchmark.cc  date-benchmark.cc  decimal-util-benchmark.cc  expr-benchmark.cc  free-lists-benchmark.cc  hash-benchmark.cc  hash-table-benchmark.cc  in-predicate-benchmark.cc  int-hash-benchmark.cc  lock-benchmark.cc  multiint-benchmark.cc  network-perf-benchmark.cc  overflow-benchmark.cc  parquet-byte-stream-split-decoder-benchmark.cc  parquet-delta-benchmark.cc  parse-timestamp-benchmark.cc  process-wide-locks-benchmark.cc  rle-benchmark.cc  row-batch-serialize-benchmark.cc  runtime-profile-benchmark.cc  scheduler-benchmark.cc  status-benchmark.cc  string-benchmark.cc  string-compare-benchmark.cc  string-search-benchmark.cc  thread-create-benchmark.cc  tuple-layout-benchmark.cc
be/src/bufferpool/: CMakeLists.txt  buffer-allocator.cc  buffer-allocator.h  buffer-pool-counters.h  buffer-pool-test.cc  buffer-pool.cc  buffer-pool.h  reservation-tracker-counters.h  reservation-tracker-test.cc  reservation-tracker.cc  reservation-tracker.h
be/src/catalog/: CMakeLists.txt  catalog-server.cc  catalog-server.h  catalog-service-client-wrapper.h  catalog-util-test.cc  catalog-util.cc  catalog-util.h  catalog.cc  catalog.h  catalogd-main.cc  workload-management-init.cc
be/src/codegen/: CMakeLists.txt  codegen-anyval-ir.cc  codegen-anyval-read-write-info.cc  codegen-anyval-read-write-info.h  codegen-anyval.cc  codegen-anyval.h  codegen-callgraph.cc  codegen-callgraph.h  codegen-fn-ptr.h  codegen-symbol-emitter.cc  codegen-symbol-emitter.h  codegen-util.cc  codegen-util.h  gen_ir_descriptions.py  impala-ir-data.h  impala-ir.cc  impala-ir.h  instruction-counter-test.cc  instruction-counter.cc  instruction-counter.h  llvm-codegen-cache-test.cc  llvm-codegen-cache.cc  llvm-codegen-cache.h  llvm-codegen-object-cache.cc  llvm-codegen-object-cache.h  llvm-codegen-test.cc  llvm-codegen.cc  llvm-codegen.h  llvm-execution-engine-wrapper.h  llvm-lifetime-test.cc  mcjit-mem-mgr.h  subexpr-elimination.cc  subexpr-elimination.h
be/src/common/: .gitignore  CMakeLists.txt  atomic-test.cc  atomic.h  compiler-util.h  config.h.in  constant-strings.h  daemon-env.cc  daemon-env.h  daemon.cc  daemon.h  global-flags.cc  global-flags.h  global-types.h  hdfs.h  init.cc  init.h  kudu_version.cc  logging.cc  logging.h  names.h  object-pool.h  service-ids.cc  service-ids.h  status-serialization.cc  status-serialization.h  status.cc  status.h  thread-debug-info-test.cc  thread-debug-info.cc  thread-debug-info.h  version.h
be/src/exec/: CMakeLists.txt  acid-metadata-utils-test.cc  acid-metadata-utils.cc  acid-metadata-utils.h  aggregation-node-base.cc  aggregation-node-base.h  aggregation-node-ir.cc  aggregation-node.cc  aggregation-node.h  aggregator.cc  aggregator.h  analytic-eval-node.cc  analytic-eval-node.h  base-sequence-scanner.cc  base-sequence-scanner.h  blob-reader.h  blocking-join-node.cc  blocking-join-node.h  blocking-join-node.inline.h  blocking-plan-root-sink.cc  blocking-plan-root-sink.h  buffered-byte-stream.cc  buffered-byte-stream.h  buffered-plan-root-sink.cc  buffered-plan-root-sink.h  byte-stream.h  cardinality-check-node.cc  cardinality-check-node.h  catalog-op-executor.cc  catalog-op-executor.h  cross-join-node.cc  cross-join-node.h  data-sink.cc  data-sink.h  data-source-scan-node.cc  data-source-scan-node.h  ddl-executor.cc  ddl-executor.h  delimited-text-parser-test.cc  delimited-text-parser.cc  (+253 more)
be/src/experiments/: CMakeLists.txt  bit-stream-utils.8byte.h  bit-stream-utils.8byte.inline.h  compression-test.cc  data-provider-test.cc  data-provider.cc  data-provider.h  hash-partition-test.cc  hash-ring-util.cc  string-search-sse-test.cc  string-search-sse.h  string-search-test.cc  tuple-splitter-test.cc
be/src/exprs/: CMakeLists.txt  agg-expr.cc  agg-expr.h  agg-fn-evaluator-ir.cc  agg-fn-evaluator.cc  agg-fn-evaluator.h  agg-fn.cc  agg-fn.h  aggregate-functions-ir.cc  aggregate-functions-test.cc  aggregate-functions.cc  aggregate-functions.h  ai-functions-ir.cc  ai-functions.cc  ai-functions.h  ai-functions.inline.h  anyval-util.cc  anyval-util.h  arithmetic-expr.cc  arithmetic-expr.h  binary-predicate.cc  binary-predicate.h  bit-byte-functions-ir.cc  bit-byte-functions.cc  bit-byte-functions.h  bool-literal.cc  bool-literal.h  case-expr.cc  case-expr.h  cast-expr.cc  cast-expr.h  cast-format-expr.cc  cast-format-expr.h  cast-functions-ir.cc  cast-functions.cc  cast-functions.h  char-literal.cc  char-literal.h  compound-predicate.cc  compound-predicate.h  (+123 more)
be/src/gutil/: CMakeLists.txt  LICENSE.txt  atomicops-internals-arm64.h  atomicops-internals-portable.h  atomicops-internals-tsan.h  bits.cc  (+26 more)
package/: CMakeLists.txt  postinst  strip.cmake
package/conf/: admissiond_flags  catalogd_flags  core-site.xml  core-site.xml.template  fair-scheduler.xml  fair-scheduler.xml.template  hdfs-site.xml  hdfs-site.xml.template  hive-site.xml  hive-site.xml.template  impala-env.sh  impalad_flags  llama-site.xml  llama-site.xml.template  statestore_flags  statestored_flags
(+19698 files in other folders)
